--- a/po/main/da.po
+++ b/po/main/da.po
@@ -3251,7 +3251,7 @@ msgstr "Sortere automatisk efter (gennemsnits) alder."
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused untill they are at least this age. Setting job priority "
+"Posts will be paused until they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 "Indlæg vil blive sat på pause indtil de har mindst denne alder. Indstilling "
@@ -4486,7 +4486,7 @@ msgid "Confirm History Deletions"
 msgstr "Bekræft Historik-fjernelse"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or untill when do you want to pause? (in English!)"
+msgid "How long or until when do you want to pause? (in English!)"
 msgstr "Hvor længe eller indtil hvornår du vil standse? (på engelsk!)"
 
 #: sabnzbd/skintext.py:842
