--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -3016,7 +3016,7 @@ msgid "Automatically sort items by (average) age."
 msgstr ""
 
 #: sabnzbd/skintext.py:466
-msgid "Posts will be paused untill they are at least this age. Setting job priority to Force will skip the delay."
+msgid "Posts will be paused until they are at least this age. Setting job priority to Force will skip the delay."
 msgstr ""
 
 #: sabnzbd/skintext.py:467
