--- a/po/main/en.po
+++ b/po/main/en.po
@@ -89,7 +89,7 @@ msgid "Original Foldername"
 msgstr "Original folder name"
 
 #: sabnzbd/skintext.py:808
-msgid "How long or untill when do you want to pause? (in English!)"
+msgid "How long or until when do you want to pause? (in English!)"
 msgstr "How long or until when do you want to pause? (in English!)"
 
 #: sabnzbd/skintext.py:917
