--- a/po/main/pl.po
+++ b/po/main/pl.po
@@ -3246,7 +3246,7 @@ msgstr "Automatycznie sortuj pozycje według wieku (średniego)"
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 
@@ -4470,7 +4470,7 @@ msgid "Confirm History Deletions"
 msgstr "Potwierdzaj usuwanie z historii"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr "Jak długo lub do kiedy chcesz wstrzymać? (po angielsku!)"
 
 #: sabnzbd/skintext.py:842
