--- a/po/main/ro.po
+++ b/po/main/ro.po
@@ -3246,7 +3246,7 @@ msgstr "Sortează automat obiectele dupa vârstă (medie)."
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 "Articolele vor fi întrerupte până ce vor avea cel puțin vechimea aceasta. "
@@ -4475,7 +4475,7 @@ msgid "Confirm History Deletions"
 msgstr "Confirmă Ştergere Istoric"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr "Cât timp sau până când doriți să întrerupeți? (în Engleză!)"
 
 #: sabnzbd/skintext.py:842
