--- a/po/main/sv.po
+++ b/po/main/sv.po
@@ -3231,7 +3231,7 @@ msgstr "Sortera automatiskt efter (medel) ålder."
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 
@@ -4449,7 +4449,7 @@ msgid "Confirm History Deletions"
 msgstr "Bekräfta Historik-borttagningar"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr "Hur lång tid eller tills då vill du pausa? (på engelska!)"
 
 #: sabnzbd/skintext.py:842
