--- a/po/main/es.po
+++ b/po/main/es.po
@@ -3271,7 +3271,7 @@ msgstr "Automáticamente ordenar elementos por antigüedad (promedio)."
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 "Los mensajes serán pausados hasta que alcancen al menos esta edad.  Esta "
@@ -4509,7 +4509,7 @@ msgid "Confirm History Deletions"
 msgstr "Confirmar eliminación del historial"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr "¿Durante cuánto tiempo quieres dejarlo pausado?"
 
 #: sabnzbd/skintext.py:842
