--- a/po/main/nb.po
+++ b/po/main/nb.po
@@ -3231,7 +3231,7 @@ msgstr "Sortere automatisk etter(midt) alder."
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 
@@ -4451,7 +4451,7 @@ msgid "Confirm History Deletions"
 msgstr "Bekreft Sletting av Historie"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr "Hvor lenge ønsker du å pause? (skriv på engelsk!)"
 
 #: sabnzbd/skintext.py:842
