--- a/po/main/ru.po
+++ b/po/main/ru.po
@@ -3217,7 +3217,7 @@ msgstr "Автоматически сортировать элементы по 
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 
@@ -4445,7 +4445,7 @@ msgid "Confirm History Deletions"
 msgstr "Подтвердите удаление журнала"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr ""
 
 #: sabnzbd/skintext.py:842
