--- a/po/main/sr.po
+++ b/po/main/sr.po
@@ -3218,7 +3218,7 @@ msgstr "Аутоматско сортирај ставке по старост (
 
 #: sabnzbd/skintext.py:466
 msgid ""
-"Posts will be paused until they are at least this age. Setting job priority "
+"Posts will be paused untill they are at least this age. Setting job priority "
 "to Force will skip the delay."
 msgstr ""
 
@@ -4434,7 +4434,7 @@ msgid "Confirm History Deletions"
 msgstr "Потврда брисања хронологије"
 
 #: sabnzbd/skintext.py:841
-msgid "How long or until when do you want to pause? (in English!)"
+msgid "How long or untill when do you want to pause? (in English!)"
 msgstr "Koliko dugo ili dokle želite da pauzirate? (na engleskom!)"
 
 #: sabnzbd/skintext.py:842
