--- a/po/main/en.po
+++ b/po/main/en.po
@@ -124,4 +124,12 @@ msgstr "Notification script returned exit code %s and output \"%s\""
 msgid "If empty, the standard port will only listen to HTTPS."
 msgstr "If empty, the SABnzbd Port set above will listen to HTTPS."
 
+#: sabnzbd/skintext.py:466
+msgid "Posts will be paused untill they are at least this age. Setting job priority to Force will skip the delay."
+msgstr "Posts will be paused until they are at least this age. Setting job priority to Force will skip the delay."
+
+#: sabnzbd/skintext.py:841
+msgid "How long or until when do you want to pause? (in English!)"
+msgstr ""
+
 
