--- a/po/email/SABemail.pot
+++ b/po/email/SABemail.pot
@@ -1,11 +1,11 @@
 #
 # SABnzbd Translation Template file EMAIL
-# Copyright (C) 2011-2015 by the SABnzbd Team
+# Copyright 2011-2017 The SABnzbd-Team
 #   team@sabnzbd.org
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: SABnzbd-0.8.x\n"
+"Project-Id-Version: SABnzbd-2.2.0-develop\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: shypike@sabnzbd.org\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
