--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -7,12 +7,12 @@ msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-2.2.0-develop\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: team@sabnzbd.org\n"
+"Last-Translator: shypike@sabnzbd.org\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 7bit\n"
-"POT-Creation-Date: 2017-06-21 22:08+W. Europe Daylight Time\n"
+"POT-Creation-Date: 2017-06-22 21:42+W. Europe Daylight Time\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
@@ -2959,14 +2959,6 @@ msgstr ""
 
 #: sabnzbd/skintext.py
 msgid "Enable MultiCore Par2"
-msgstr ""
-
-#: sabnzbd/skintext.py
-msgid "Enable MultiPar"
-msgstr ""
-
-#: sabnzbd/skintext.py
-msgid "MultiPar is the fastest par2 verification and repair implementation, using multiple cores and the GPU (if available)."
 msgstr ""
 
 #: sabnzbd/skintext.py
