--- a/README.mkd
+++ b/README.mkd
@@ -1,55 +1,46 @@
-Release Notes  -  SABnzbd 2.2.0 Beta 2
+Release Notes  -  SABnzbd 2.2.0 Release Candidate 1
 =========================================================
 
 NOTE: Due to changes in this release, the queue will be converted when 2.2.0
 is started for the first time. Job order, settings and data will be
-preserved, but all jobs will be unpaused and URL's that did not finish
+preserved, but all jobs will be unpaused and URLs that did not finish
 fetching before the upgrade will be lost!
-
-## Bugfixes and changes since Beta 1
-- Graphical overview of daily server usage on Servers page
-- New option History Retention to limit number of jobs in History
-- Add Retry All Failed button to Glitter
-- Add option to only tag a duplicate job without pausing or removing it
-- Remove video and audio rating icons from Queue
-- Show vote buttons instead of video and audio rating buttons in History
-- Direct Unpack could crash
-- Wizard was always accessible, even with username and password set
-- Several styling fixes in the interface
-
-## Bugfixes since Alpha 3
-- Bugfixes and stability updates for Direct Unpack
-- Notification errors
-- Correct value in "Speed" Extra History Column
 
 ## Changes since 2.1.0
 - Direct Unpack: Jobs will start unpacking during the download, reduces
   post-processing time but requires capable hard drive. Only works for jobs that
-  do not need repair. Will be enabled if your incomplete folder-speed > 60MB/s
+  do not need repair. Will be enabled if your incomplete folder-speed > 40MB/s
 - Reduced memory usage, especially with larger queues
-- Removed 5 second delay between fetching URLs
+- Graphical overview of daily server-usage on Servers page
 - Notifications can now be limited to certain Categories
-- Each item in the Queue and Filelist now has Move to Top/Bottom buttons
-- Smoother animations in Firefox (disabled previously due to FF high-CPU usage)
+- Removed 5 second delay between fetching URLs
+- Each item in the Queue and File list now has Move to Top/Bottom buttons
+- Add option to only tag a duplicate job without pausing or removing it
+- New option "History Retention" to automatically purge jobs from History
 - Jobs outside server retention are processed faster
-- Show missing articles in MB instead of number of articles
 - Obfuscated filenames are renamed during downloading, if possible
+- Add "Retry All Failed" button to Glitter
+- Smoother animations in Firefox (disabled previously due to FF high-CPU usage)
+- Show missing articles in MB instead of number of articles
+- Correct value in "Speed" Extra History Column
+- Remove video and audio rating icons from Queue
+- Show vote buttons instead of video and audio rating buttons in History
 - If enable_par_cleanup is disabled all par2 files be downloaded
 - If enabled, replace dots in filenames also when there are spaces already
 - Update GNTP bindings to 1.0.3
 - max_art_opt and replace_illegal moved from Switches to Specials
-- Removed Specials enable_meta, par2_multicore and allow_streaming
+- Removed Specials par2_multicore and allow_streaming
 - Windows: Full unicode support when calling repair and unpack
-- Windows: Move enable_multipar to Specials
+- Windows: Move enable_MultiPar to Specials
 - Windows: Better indication of verification process before and after repair
 - Windows: MultiPar verification of a job is skipped after blocks are fetched
-- Windows & macOS: removed par2cmdline in favor of par2tbb/Multipar
+- Windows & macOS: removed par2cmdline in favor of par2tbb/MultiPar
 
 ## Bugfixes since 2.1.0
 - Shutdown/suspend did not work on some Linux systems
 - Deleting a job could result in write errors
-- Display warning if custom par2 parameters are wrong
-- RSS URLs with commas were broken
+- Display warning if "Extra par2 parameters" turn out to be wrong
+- RSS URLs with commas in the URL were broken
 - Fixed some "Saving failed" errors
 - Fixed crashing URLGrabber
 - Jobs with renamed files are now correctly handled when using Retry
@@ -59,9 +50,12 @@ fetching before the upgrade will be lost!
 - History would not always show latest changes
 - Convert HTML in error messages
 - Fixed unicode error during Sorting
+- Wizard was always accessible, even with username and password set
 - Not all texts were shown in the selected Language
+- Catch "error 0" when using HTTPS on some Linux platforms
+- Improve zeroconf/bonjour by sending HTTPS setting and auto-discover of IP
 - Windows: Fix error in MultiPar-code when first par2-file was damaged
-- macOS: Catch 'Protocol wrong type for socket' errors
+- macOS: Catch "Protocol wrong type for socket" errors
 
 ## Translations
 - Added Hebrew translation by ION IL, many other languages updated.
@@ -72,15 +66,10 @@ fetching before the upgrade will be lost!
 - Install new version
 - Start SABnzbd
 
-## Upgrade notices (from pre-2.x.x)
-- Windows: When starting the Post-Processing script, the path to the job folder
-  is no longer in short-path notation but includes the full path. To support
-  long paths (>255), you might need to alter them to long-path notation (\\?\).
-- Schedule items are converted when upgrading to 2.x.x and will break when
-  reverted back to pre-2.x.x releases.
+## Upgrade notices
 - The organization of the download queue is different from 0.7.x releases.
-  So 2.x.x will not see the existing queue, but you can go to Status->Queue Repair
-  and "Repair" the old queue.
+  This version will not see the old queue, but you restore the jobs by going
+  to Status page and use Queue Repair.
 
 ## Known problems and solutions
 - Read the file "ISSUES.txt"
