--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -12,7 +12,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 7bit\n"
-"POT-Creation-Date: 2017-07-27 13:45+W. Europe Daylight Time\n"
+"POT-Creation-Date: 2017-07-27 15:58+W. Europe Daylight Time\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
@@ -3021,7 +3021,7 @@ msgid "Use tags from indexer"
 msgstr ""
 
 #: sabnzbd/skintext.py
-msgid "Use tags from indexer for title, season, episode, etc. Otherwise all naming is derived from the NZB name."
+msgid "When sorting, use tags from indexer for title, season, episode, etc. Otherwise all naming is derived from the NZB name."
 msgstr ""
 
 #: sabnzbd/skintext.py
