--- a/po/main/en.po
+++ b/po/main/en.po
@@ -108,3 +108,8 @@ msgstr "Support the project, donate!"
 msgid  "%d files with duplicate filenames were discared for "%s". Enable "allow_duplicate_files" to allow duplicate filenames."
 msgstr "%d files with duplicate filenames were discarded for "%s". Enable "allow_duplicate_files" to allow duplicate filenames."
 
+msgid "User script can flag job as failed"
+msgstr "Post-processing script can flag job as failed"
+
+msgid "When the user script returns a non-zero exit code, the job will be flagged as failed."
+msgstr "When the post-processing script returns a non-zero exit code, the job will be flagged as failed."
