--- a/README.mkd
+++ b/README.mkd
@@ -1,10 +1,15 @@
-Release Notes  -  SABnzbd 2.2.0 Release Candidate 2
+Release Notes  -  SABnzbd 2.2.0 Release Candidate 3
 =========================================================
 
 NOTE: Due to changes in this release, the queue will be converted when 2.2.0
 is started for the first time. Job order, settings and data will be
 preserved, but all jobs will be unpaused and URLs that did not finish
 fetching before the upgrade will be lost!
+
+## Changes since 2.2.0 Release Candidate 2
+- Handling of par2 files made more robust
+- Standby/Hibernate was not working on Windows
+- Server graphs did not work in all time zones
 
 ## Changes since 2.2.0 Release Candidate 1
 - Not all RAR files were correctly removed for encrypted downloads
