--- a/README.mkd
+++ b/README.mkd
@@ -1,32 +1,10 @@
-Release Notes  -  SABnzbd 2.2.0 Release Candidate 3
+Release Notes  -  SABnzbd 2.2.0
 =========================================================
 
 NOTE: Due to changes in this release, the queue will be converted when 2.2.0
 is started for the first time. Job order, settings and data will be
 preserved, but all jobs will be unpaused and URLs that did not finish
 fetching before the upgrade will be lost!
-
-## Changes since 2.2.0 Release Candidate 2
-- Handling of par2 files made more robust
-- Standby/Hibernate was not working on Windows
-- Server graphs did not work in all time zones
-
-## Changes since 2.2.0 Release Candidate 1
-- Not all RAR files were correctly removed for encrypted downloads
-- Better indication of verification process before and after repair
-- All par2 files are only downloaded when enabled, not on enable_par_cleanup
-- Disk-space is now checked before writing files
-- Server usage graphs did not always list all available months
-- Warning is shown when many files with duplicate filenames are discarded
-- Special characters like []!* in filenames could break repair
-- In some cases not all RAR-sets were unpacked
-- Categories with ' in them could result in SQL errors
-- Faulty pynotify could stop shutdown
-- Various CSS fixes in Glitter and the Config
-- macOS: Really catch "Protocol wrong type for socket" errors
-
-- NOTE: Option to limit Servers to specific Categories is now scheduled
-  to be removed in the next release.
 
 ## Changes since 2.1.0
 - Direct Unpack: Jobs will start unpacking during the download, reduces
@@ -41,23 +19,28 @@ fetching before the upgrade will be lost!
 - New option "History Retention" to automatically purge jobs from History
 - Jobs outside server retention are processed faster
 - Obfuscated filenames are renamed during downloading, if possible
+- Disk-space is now checked before writing files
 - Add "Retry All Failed" button to Glitter
 - Smoother animations in Firefox (disabled previously due to FF high-CPU usage)
 - Show missing articles in MB instead of number of articles
-- Correct value in "Speed" Extra History Column
+- Better indication of verification process before and after repair
 - Remove video and audio rating icons from Queue
 - Show vote buttons instead of video and audio rating buttons in History
 - If enabled, replace dots in filenames also when there are spaces already
+- Handling of par2 files made more robust
+- All par2 files are only downloaded when enabled, not on enable_par_cleanup
 - Update GNTP bindings to 1.0.3
 - max_art_opt and replace_illegal moved from Switches to Specials
 - Removed Specials par2_multicore and allow_streaming
 - Windows: Full unicode support when calling repair and unpack
-- Windows: Move enable_MultiPar to Specials
+- Windows: Move enable_multipar to Specials
 - Windows: MultiPar verification of a job is skipped after blocks are fetched
 - Windows & macOS: removed par2cmdline in favor of par2tbb/MultiPar
+- Windows & macOS: Updated WinRAR to 5.5.0
 
 ## Bugfixes since 2.1.0
 - Shutdown/suspend did not work on some Linux systems
+- Standby/Hibernate was not working on Windows
 - Deleting a job could result in write errors
 - Display warning if "Extra par2 parameters" turn out to be wrong
 - RSS URLs with commas in the URL were broken
@@ -69,10 +52,17 @@ fetching before the upgrade will be lost!
 - Fix race-condition in Post-processing
 - History would not always show latest changes
 - Convert HTML in error messages
+- In some cases not all RAR-sets were unpacked
 - Fixed unicode error during Sorting
+- Faulty pynotify could stop shutdown
+- Categories with ' in them could result in SQL errors
+- Special characters like []!* in filenames could break repair
 - Wizard was always accessible, even with username and password set
+- Correct value in "Speed" Extra History Column
 - Not all texts were shown in the selected Language
+- Various CSS fixes in Glitter and the Config
 - Catch "error 0" when using HTTPS on some Linux platforms
+- Warning is shown when many files with duplicate filenames are discarded
 - Improve zeroconf/bonjour by sending HTTPS setting and auto-discover of IP
 - Windows: Fix error in MultiPar-code when first par2-file was damaged
 - macOS: Catch "Protocol wrong type for socket" errors
@@ -80,7 +70,11 @@ fetching before the upgrade will be lost!
 ## Translations
 - Added Hebrew translation by ION IL, many other languages updated.
 
-## Upgrading from 0.7.x and older
+## Depreciation notices
+- Option to limit Servers to specific Categories is now scheduled
+  to be removed in the next release.
+
+## Upgrading from 2.1.x and older
 - Finish queue
 - Stop SABnzbd
 - Install new version
